# HuntKTm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  compile.sh  run_single_task.sh
benchmarks/multi_stream/b1/: Makefile  b1.cu
benchmarks/multi_stream/b10/: Makefile  b10.cu  kernel_info.txt
benchmarks/multi_stream/b14/: Makefile  b14.cu  kernel_info.txt
benchmarks/multi_stream/b15/: b15.cu
benchmarks/multi_stream/b5/: Makefile  b5.cu  kernel_info.txt
benchmarks/multi_stream/b6/: Makefile  b6.cu  kernel_info.txt
benchmarks/multi_stream/b8/: Makefile  b8.cu  kernel_info.txt
benchmarks/multi_stream/common/: dvrapi_error_string.h  generate.py  make.config  utils.h
benchmarks/multi_stream_single/b1/: b1.cu  kernel_info.txt
benchmarks/multi_stream_single/b10/: b10.cu
benchmarks/multi_stream_single/b14/: b14.cu
benchmarks/multi_stream_single/b15/: Makefile  b15.cu  kernel_info.txt
benchmarks/multi_stream_single/b5/: b5.cu
benchmarks/multi_stream_single/b6/: b6.cu  kernel_info.txt
benchmarks/multi_stream_single/b7/: Makefile  b7.cu
benchmarks/multi_stream_single/b8/: b8.cu
benchmarks/multi_stream_single/common/: generate.py  generate_different_streams.py  make.config
driver/: ae_aux.sh  plot.py  post_process_ae.py  run_experiments_ae.sh  run_multi_task.sh  workloader.py
driver/workloads/taco24/: A100_16_16jobs.wl  A100_16_16jobs_ms.wl  A100_16_16jobs_ms_mem.wl  A100_16_32jobs.wl  A100_16_32jobs_ms.wl  A100_16_32jobs_ms_mem.wl  A100_25_16jobs.wl  A100_25_16jobs_ms.wl  A100_25_16jobs_ms_mem.wl  A100_25_32jobs.wl  A100_25_32jobs_ms.wl  A100_25_32jobs_ms_mem.wl  A100_33_16jobs.wl  A100_33_16jobs_ms.wl  A100_33_16jobs_ms_mem.wl  A100_33_32jobs.wl  A100_33_32jobs_ms.wl  A100_33_32jobs_ms_mem.wl  A100_50_16jobs.wl  A100_50_16jobs_ms.wl  A100_50_16jobs_ms_mem.wl  A100_50_32jobs.wl  A100_50_32jobs_ms.wl  A100_50_32jobs_ms_mem.wl  motivation-1-ms.wl  motivation-1.wl  motivation-2-ms-mem.wl  motivation-2-ms.wl
include/passes/analyzer/: analyzer.h
include/passes/scheduler/: graph.h
include/passes/wrapper/: wrapper_pass.h
include/runtime/common/: common.h
include/runtime/scheduler/: scheduler.h
include/runtime/wrapper/: runtime_interface.h  wrapper.h
libstatus/: .gitignore  Makefile  README.md  common.h  device.cpp  device.h  example.cpp  profiler.cpp  profiler.h  system.cpp  system.h
src/: CMakeLists.txt
src/passes/: CMakeLists.txt
src/passes/analyzer/: analyzer.cpp  util.cpp
src/passes/scheduler/: CMakeLists.txt  graph.cpp  stream_scheduler.cpp
src/passes/wrapper/: CMakeLists.txt  wrapper_pass.cpp
src/runtime/: CMakeLists.txt
src/runtime/scheduler/: CMakeLists.txt  scheduler.cpp
src/runtime/wrapper/: CMakeLists.txt  runtime_interface.cpp  wrapper.cpp
